Fix for line gap on certain tablet devices

--- a/styles/About.module.scss
+++ b/styles/About.module.scss
@@ -42,7 +42,7 @@ $grey-txt: #9b9b9b;
   &__divider {
     background: url('../public/hero-divider.png') no-repeat;
     position: absolute;
-    bottom: 0;
+    bottom: -1px;
     width: 100%;
     height: 60px;
   }
